[tool.poetry]
name = "fsd-medic"
version = "0.1.0"
description = "Applications for treatment in convenient conditions from anywhere in the world"
authors = ["ternyavsky <ilya.ternyavsky@yandex.ru>"]
readme = "README.md"
packages = [{include = "fsd_medic"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "==3.8.4"
aiohttp-retry = "==2.8.3"
aiosignal = "==1.3.1"
asgiref = "==3.7.2"
async-timeout = "==4.0.2"
attrs = "==23.1.0"
autobahn = "==23.6.2"
automat = "==22.10.0"
certifi = "==2023.5.7"
cffi = "==1.15.1"
channels = "==4.0.0"
channels-redis = "==4.1.0"
charset-normalizer = "==3.1.0"
constantly = "==15.1.0"
cryptography = "==41.0.1"
daphne = "==4.0.0"
django-braces = "==1.15.0"
django-cors-headers = "==4.1.0"
django-debug-toolbar = "==4.1.0"
django-extensions = "==3.2.3"
django-model-utils = "==4.3.1"
djangochannelsrestframework = "==1.1.0"
djangorestframework = "==3.14.0"
djangorestframework-simplejwt = "==5.2.2"
drf-extra-fields = "==3.5.0"
drf-yasg = "==1.21.7"
filetype = "==1.2.0"
frozenlist = "==1.3.3"
generics = "==6.0.0"
hyperlink = "==21.0.0"
idna = "==3.4"
incremental = "==22.10.0"
inflection = "==0.5.1"
msgpack = "==1.0.5"
multidict = "==6.0.4"
mysqlclient = "==2.1.1"
packaging = "==23.1"
pillow = "==9.5.0"
pyasn1 = "==0.5.0"
pyasn1-modules = "==0.3.0"
pycparser = "==2.21"
pyjwt = "==2.7.0"
pyopenssl = "==23.2.0"
python-dotenv = "==1.0.0"
pytz = "==2023.3"
pyyaml = "==6.0.1"
redis = "==4.6.0"
requests = "==2.31.0"
service-identity = "==23.1.0"
six = "==1.16.0"
sqlparse = "==0.4.4"
twilio = "==8.4.0"
twisted = "==22.10.0"
txaio = "==23.1.1"
typing-extensions = "==4.7.1"
tzdata = "==2023.3"
uritemplate = "==4.1.1"
whitenoise = "==6.5.0"
yarl = "==1.9.2"
zope-interface = "==6.0"
django-redis = "^5.3.0"
loguru = "^0.7.0"
django-query-debugger = "^0.0.4"
django-debug-panel = "^0.8.3"
django = "^4.2.4"
pymemcache = "^4.0.0"
uvicorn = "^0.23.2"
gunicorn = "^21.2.0"
django-prometheus = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
